--- a/public/index.html
+++ b/public/index.html
@@ -383,7 +383,7 @@
               <div class="flex-1">
                 <h5 class="text-secondary fw-bold fs-0">Reach Airport on Selected Date</h5>
                 <p>Lastly, you have to arrive at the airport <br class="d-none d-sm-block"> on time and enjoy the
-                  vacation.</p>
+                  vacation</p>
               </div>
             </div>
           </div>
