--- a/public/index.html
+++ b/public/index.html
@@ -104,12 +104,12 @@
     <section class="pt-5 pt-md-9" id="about">
 
       <div class="container-fluid-video">
-        <video src="/public/assets/img/1475252_People_Family_3840x2160.mp4" muted loop autoplay></video>
+        <video src="/assets/img/1475252_People_Family_3840x2160.mp4" muted loop autoplay></video>
         <div class="container">
           <div class="row">
             <div class="col-sm-12 about-2">
               <div class="col-sm-6">
-                <img src="/public/assets/img/woman-with-kimono-wagasa-umbrella.jpg" alt="">
+                <img src="/assets/img/woman-with-kimono-wagasa-umbrella.jpg" alt="">
               </div>
               <div class="col-sm-6 para-2">
                 <h4>About</h4>
@@ -147,7 +147,7 @@
                 great time.</p>
             </div>
             <div class="col-sm-5">
-              <img src="/public/assets/img/countryside-girl-voyage-leisure-road-together.jpg" alt="">
+              <img src="/assets/img/countryside-girl-voyage-leisure-road-together.jpg" alt="">
             </div>
           </div>
         </div>
@@ -297,7 +297,7 @@
         <div class="row">
           <div class="col-md-4 mb-4">
             <div class="card overflow-hidden shadow"> <img class="card-img-top" style="height: 466px;"
-                src="/public/assets/img/New folder/garden-cambodia-holiday-religion-vacation.jpg" alt="Rome, Italty" />
+                src="/assets/img/New folder/garden-cambodia-holiday-religion-vacation.jpg" alt="Rome, Italty" />
               <div class="card-body py-4 px-3">
                 <div class="d-flex flex-column flex-lg-row justify-content-between mb-3">
                   <h4 class="text-secondary fw-medium"><a class="link-900 text-decoration-none stretched-link"
@@ -311,7 +311,7 @@
           </div>
           <div class="col-md-4 mb-4">
             <div class="card overflow-hidden shadow"> <img class="card-img-top"
-                src="/public/assets/img/New folder/freepik__upload__38346.png" alt="London, UK" />
+                src="/assets/img/New folder/freepik__upload__38346.png" alt="London, UK" />
               <div class="card-body py-4 px-3">
                 <div class="d-flex flex-column flex-lg-row justify-content-between mb-3">
                   <h4 class="text-secondary fw-medium"><a class="link-900 text-decoration-none stretched-link"
@@ -325,7 +325,7 @@
           </div>
           <div class="col-md-4 mb-4">
             <div class="card overflow-hidden shadow"> <img class="card-img-top" style="height: 466px;"
-                src="/public/assets/img/freepik__expand__88207.png" alt="Full Europe" />
+                src="/assets/img/freepik__expand__88207.png" alt="Full Europe" />
               <div class="card-body py-4 px-3">
                 <div class="d-flex flex-column flex-lg-row justify-content-between mb-3">
                   <h4 class="text-secondary fw-medium"><a class="link-900 text-decoration-none stretched-link"
@@ -392,7 +392,7 @@
               <div class="position-absolute z-index--1 me-10 me-xxl-0" style="right:-160px;top:-210px;"> <img
                   src="assets/img/steps/bg.png" style="max-width:550px;" alt="shape" /></div>
               <div class="card-body p-3"> <img class="mb-4 mt-2 rounded-2 w-100"
-                  src="/public/assets/img/full-shot-woman-going-work-bicycle.jpg" alt="booking" />
+                  src="/assets/img/full-shot-woman-going-work-bicycle.jpg" alt="booking" />
                 <div>
                   <h5 class="fw-medium">Trip To Thailand</h5>
                   <p class="fs--1 mb-3 fw-medium">14-29 June | by Sandeep</p>
@@ -588,7 +588,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-3 col-md-7 col-12 mb-4 mb-md-6 mb-lg-0 order-0"> <img class="mb-4"
-              src="/public/assets/img/logo-removebg-preview.png" width="150" alt="GoodLuck" />
+              src="/assets/img/logo-removebg-preview.png" width="150" alt="GoodLuck" />
             <p class="fs--1 text-secondary mb-0 fw-medium">Book your trip in minute, get full Control for much longer.
             </p>
           </div>
