--- a/public/domestic.html
+++ b/public/domestic.html
@@ -42,7 +42,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-5 d-block"
       data-navbar-on-scroll="data-navbar-on-scroll">
       <div class="container"><a class="navbar-brand" href="index.html"><img
-            src="/public/assets/img/logo-removebg-preview.png" height="80" alt="logo" /></a>
+            src="/assets/img/logo-removebg-preview.png" height="80" alt="logo" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span
             class="navbar-toggler-icon"> </span></button>
@@ -151,7 +151,7 @@
               </div>
             </div>
             <div class="col-md-4 mb-4">
-              <div class="card overflow-hidden shadow"> <img class="card-img-top" src="/public/assets/img/New folder/mesmerizing-view-snow-capped-mountains-tromso-norway_181624-55104.avif" style="height: 350px;"
+              <div class="card overflow-hidden shadow"> <img class="card-img-top" src="/assets/img/New folder/mesmerizing-view-snow-capped-mountains-tromso-norway_181624-55104.avif" style="height: 350px;"
                   alt="London, UK" />
                 <div class="card-body py-4 px-3">
                   <div class="d-flex flex-column flex-lg-row justify-content-between mb-3">
@@ -214,7 +214,7 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-7 col-12 mb-4 mb-md-6 mb-lg-0 order-0"> <img class="mb-4"
-                src="/public/assets/img/logo-removebg-preview.png" width="150" alt="GoodLuck" />
+                src="/assets/img/logo-removebg-preview.png" width="150" alt="GoodLuck" />
               <p class="fs--1 text-secondary mb-0 fw-medium">Book your trip in minute, get full Control for much longer.
               </p>
             </div>
